--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0f172a" />
   <meta name="description" content="Online Job Recruitment & Application Tracking System" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>JobPortal - Find Your Dream Job</title>
+  <title>Blueprint - Find Your Dream Job</title>
 </head>
 
 <body>
@@ -20,4 +21,3 @@
 </body>
 
 </html>
-
