--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>Blueprint - Find Your Dream Job</title>
+  <title>BluePrint - Find Your Dream Job</title>
 </head>
 
 <body>
